k8s/vault/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-external-route
  namespace: vault
spec:
  parentRefs:
  # Cryptographically links this route to the parent Gateway
  - name: cilium-edge-gateway
    namespace: default
  hostnames:
  # We use a mock domain for the iximiuz lab test
  - "vault.iximiuz.local" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault
      port: 8200
